Testing for search

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
         <item>WiFi</item>
         <item>Bluetooth</item>
         <item>GSM/UMTS</item>
-        <item>Accelerometers</item>
+        <item>Accelerometer</item>
         <item>Compass</item>
         <item>Radio</item>
         <item>Screen</item>
