--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,6 +90,6 @@ Sense-It-All! tests for the following sensors\'s presence in your device:\n
 38. NFC\n
 39. Magnetic Field Sensor\n\n
 
-The tests for the above sensors provided in the app will could be used for fun, as well as for professional purposes, thus am extremely large range of people are welcome to use this app for sensor testing, or rather broadly, device testing.</string>
+The tests for the above sensors provided in the app will could be used for fun, as well as for professional purposes, thus an extremely large range of people are welcome to use this app for sensor testing, or rather broadly, device testing.</string>
 
 </resources>
