--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,20 @@
 <resources>
     <string name="app_name">Sense It All!</string>
 
-    <string-array name="sensors_list">
+    <string-array name="lightPercentages">
+        <item>0 to 10 %</item>
+        <item>11 to 20 %</item>
+        <item>21 to 30 %</item>
+        <item>31 to 40 %</item>
+        <item>41 to 50 %</item>
+        <item>51 to 60 %</item>
+        <item>61 to 70 %</item>
+        <item>71 to 80 %</item>
+        <item>81 to 90 %</item>
+        <item>91 to 100 %</item>
+    </string-array>
 
+    <string-array name="sensors_list">
         <item>Main Camera</item>
         <item>Secondary Camera</item>
         <item>GPS</item>
