removed unnecessary layout files dependencies

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -147,11 +147,23 @@ Sense-It-All! tests for the following sensors\'s presence in your device:\n
 The tests for the above sensors provided in the app will could be used for fun, as well as for professional purposes, thus an extremely large range of people are welcome to use this app for sensor testing, or rather broadly, device testing.</string>
     <string name="sense_it_all">Sense It All!</string>
     <string name="device_test">Device Test</string>
-    <string name="dev_names">Robin Kamboj || RishabhShukla</string>
+    <string name="dev_names">Robin Kamboj || Rishabh Shukla</string>
     <string name="developers">Developers :</string>
     <string name="like_the_app">Like the app?</string>
     <string name="rate_us_five_stars">Rate Us Five Stars</string>
     <string name="about_the_app">About The App:</string>
     <string name="null_str">null</string>
+    <string name="magnetic_field_sensor">Magnetic Field Sensor</string>
+    <string name="accelerometer_sensor">Accelerometer Sensor</string>
+    <string name="magnetic_compass">Magnetic Compass</string>
+    <string name="radio">Radio</string>
+    <string name="screen">Screen</string>
+    <string name="cpu_details">CPU Details</string>
+    <string name="sound_test">Sound Test</string>
+    <string name="audio_video_test">Audio / Video Test</string>
+    <string name="android_os">Android OS</string>
+    <string name="proximity_sensor_test">Proximity Sensor Test</string>
+    <string name="step_counter_test">Step Counter Test</string>
+    <string name="step_detector_test">Step Detector Test</string>
 
 </resources>
