--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -180,6 +180,7 @@ The tests for the above sensors provided in the app will could be used for fun, 
     <string name="please_give_permissions">Some permissions not given. Please allow these permissions to access all sensors.</string>
 
     <string name="tag_list_fragment">LIST FRAGMENT</string>
+    <string name="tag_request_fragment">REQUEST FRAGMENT</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
