--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -204,6 +204,8 @@ The tests for the above sensors provided in the app will could be used for fun, 
     </string>
     <string name="directions">DIRECTIONS</string>
     <string name="proximity_direction">Place Your Hand Above Proximity Sensor To Increment Counter.</string>
-    <string name="proximity_hint">Proximity sensor is usually located at the top of a mobile screen</string>
+    <string name="proximity_hint">Proximity sensor is usually located at the top of a mobile screen.</string>
     <string name="start_test">START TEST</string>
+    <string name="count">COUNT =</string>
+    <string name="default_count">COUNT = 0</string>
 </resources>
