abstract classes and accelerometer fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -196,11 +196,7 @@ The tests for the above sensors provided in the app will could be used for fun, 
     <string name="learn_more">LEARN MORE</string>
 
     <string name="about_proximity">
-        Proximity sensing technology is becoming popular across a wide range of industries,
-        especially in consumer electronics, because OEMs introduce new products to market every year.
-        The largest application within consumer electronics is the mobile phone.
-        Given the competition in this particular market,
-        it is important for OEMs to adopt the latest technology and offer unique features to differentiate their products.
+        Proximity sensing technology is becoming popular across a wide range of industries, especially in consumer electronics, because OEMs introduce new products to market every year. The largest application within consumer electronics is the mobile phone. Given the competition in this particular market, it is important for OEMs to adopt the latest technology and offer unique features to differentiate their products.
     </string>
     <string name="directions">DIRECTIONS</string>
     <string name="proximity_direction">Place Your Hand Above Proximity Sensor To Increment Counter.</string>
