--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -204,4 +204,5 @@ The tests for the above sensors provided in the app will could be used for fun, 
     <string name="start_test">START TEST</string>
     <string name="count">COUNT =</string>
     <string name="default_count">COUNT = 0</string>
+    <string name="shake_to_change_screen_color">SHAKE TO CHANGE SCREEN COLOR</string>
 </resources>
