back camera preview test

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -209,4 +209,5 @@ The tests for the above sensors provided in the app will could be used for fun, 
     <string name="maximum_reading">Maximum Reading:</string>
     <string name="percentage">Percentage:</string>
     <string name="intensity_color_reference">Intensity Color Reference:</string>
+    <string name="you_should_see_camera_preview_here">YOU SHOULD SEE CAMERA PREVIEW HERE</string>
 </resources>
