--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -219,4 +219,6 @@ The tests for the above sensors provided in the app will could be used for fun, 
     <string name="reset">RESET</string>
     <string name="no_fingerprints">No fingerprints registered on device.</string>
     <string name="security_not_enabled">Lock screen security not enabled in settings.</string>
+    <string name="compass_hands">compass hands</string>
+    <string name="compass_dial">compass dial</string>
 </resources>
