--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -221,4 +221,5 @@ The tests for the above sensors provided in the app will could be used for fun, 
     <string name="security_not_enabled">Lock screen security not enabled in settings.</string>
     <string name="compass_hands">compass hands</string>
     <string name="compass_dial">compass dial</string>
+    <string name="click_to_vibrate">CLICK TO VIBRATE</string>
 </resources>
