--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -224,4 +224,6 @@ The tests for the above sensors provided in the app will could be used for fun, 
     <string name="click_to_vibrate">CLICK TO VIBRATE</string>
     <string name="jack_is_detected">JACK OUTPUT DETECTED</string>
     <string name="jack_is_not_detected">JACK OUTPUT NOT DETECTED</string>
+    <string name="not_charging">NOT CHARGING</string>
+    <string name="charging">CHARGING</string>
 </resources>
